Slider spacing fixes (#1037)

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -24,6 +24,8 @@ slider-component {
     scroll-padding-left: 1rem;
     -webkit-overflow-scrolling: touch;
     margin-bottom: 1rem;
+    padding-top: calc(var(--shadow-vertical-offset) * -1 + var(--shadow-blur-radius));
+    padding-bottom: calc(var(--shadow-vertical-offset) + var(--shadow-blur-radius));
   }
 
   .slider.slider--mobile .slider__slide {
@@ -59,6 +61,8 @@ slider-component {
     scroll-padding-left: 1rem;
     -webkit-overflow-scrolling: touch;
     margin-bottom: 1rem;
+    padding-top: calc(var(--shadow-vertical-offset) * -1 + var(--shadow-blur-radius));
+    padding-bottom: calc(var(--shadow-vertical-offset) + var(--shadow-blur-radius));
   }
 
   .slider.slider--tablet .slider__slide {
